--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sentinel: Multitask Team</title>
+  <title>Hundred Blocks</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -24,12 +24,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Sentinel</a>
+            <a class="navbar-brand" href="index.html">Hundred Blocks</a>
           </div>
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/index.html">Favorite Spots</a></li>
+              <li><a href="/index.html">Favorite Spots</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/aboutme.html">About Me</a></li>
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-     <script type="text/javascript" src="/js/fav_spots.js"></script>
+     <script type="text/javascript" src="/js/script_rebalancing.js"></script>
 
   </body>
 </html>
