--- a/fav_spots.html
+++ b/fav_spots.html
@@ -5,17 +5,18 @@
   <title>Hundred Blocks</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico?">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/rebalancing.css">
+  <link rel="stylesheet" type="text/css" href="css/fav_spots.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
   <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
   <script src="https://d3js.org/d3.v4.js"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <body style="height: 100%; width: 100%;">
 
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -24,15 +25,15 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Hundred Blocks</a>
+            <a class="navbar-brand" href="index.html">Home</a>
           </div>
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li><a href="/index.html">Favorite Spots</a></li>
+              <li class="active"><a href="/fav_spots.html">Favorite Spots</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/aboutme.html">About Me</a></li>
+              <li><a href="about_me.html">About Me</a></li>
           </div>
         </div>
       </nav>
@@ -42,13 +43,13 @@
       <div id="data">
         <div id="table"></div>
         <div id="runner">
-          <button id="run-button" type="button" class="btn btn-primary disabled">Rebalance Cars</button>
-          <button id="reset-button" type="button" class="btn btn-primary disabled">Reset</button>
+          <!-- <button id="run-button" type="button" class="btn btn-primary disabled">Make a day out of It!</button>
+          <button id="reset-button" type="button" class="btn btn-primary disabled">Reset</button> -->
         </div>
       </div>
     </div>
 
-     <script type="text/javascript" src="/js/script_rebalancing.js"></script>
+     <script type="text/javascript" src="/js/fav_spots.js"></script>
 
   </body>
 </html>
