--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Sentinel: Multitask Team</title>
+  <title>Hundred Blocks</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico?">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="css/rebalancing.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
-  <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-  <script src="https://d3js.org/d3.v4.js"></script>
-  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
   <body style="height: 100%; width: 100%;">
 
-      <nav class="navbar navbar-inverse">
+      <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -24,31 +22,54 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Sentinel</a>
+            <a class="active navbar-brand" href="index.html">Home</a>
           </div>
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-              <li class="active"><a href="/index.html">Favorite Spots</a></li>
+              <li><a href="/fav_spots.html">Favorite Spots</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="/aboutme.html">About Me</a></li>
+              <li><a href="/about_me.html">About Me</a></li>
           </div>
         </div>
       </nav>
 
-    <div id="page">
-      <div id="mapid"></div>
-      <div id="data">
-        <div id="table"></div>
-        <div id="runner">
-          <button id="run-button" type="button" class="btn btn-primary disabled">Rebalance Cars</button>
-          <button id="reset-button" type="button" class="btn btn-primary disabled">Reset</button>
+    <div id="main">
+    <h3>Welcome to Emmanuel's landing page</h3>
+    <div class="row">
+      <div class="col-sm-4 col-md-3">
+        <div class="thumbnail">
+          <a href="https://github.com/hundredblocks" class="thumbnail">
+          <img style="height: 200px; width: 100%; display: block;" src="/assets/thumbnails/github.png" data-holder-rendered="true">
+        </a>
+        <div class="caption"> <h3>My Github</h3>
+            <p>A little bit of everything.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4 col-md-3">
+        <div class="thumbnail">
+          <a href="fav_spots.html" class="thumbnail">
+          <img alt="100%x200" data-src="holder.js/100%x200" style="height: 200px; width: 100%; display: block;" src="/assets/thumbnails/fav_spots.png" data-holder-rendered="true">
+          </a>
+          <div class="caption"> <h3>Favorite Spots</h3>
+            <p>A map to share my favorite spots in San Francisco!</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm-4 col-md-3">
+        <div class="thumbnail">
+          <a href="about_me.html" class="thumbnail">
+          <img alt="100%x200" data-src="holder.js/100%x200" style="height: 200px; width: 100%; display: block;" src="/assets/thumbnails/headshot.jpeg" data-holder-rendered="true">
+          </a>
+          <div class="caption"> <h3>About me</h3>
+            <p>Resume, and other fun details.</p>
+          </div>
         </div>
       </div>
     </div>
-
-     <script type="text/javascript" src="/js/fav_spots.js"></script>
 
   </body>
 </html>
