--- a/about_me.html
+++ b/about_me.html
@@ -23,15 +23,12 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">Home</a>
+            <a class="active navbar-brand" href="index.html">Emmanuel Ameisen</a>
           </div>
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="/fav_spots.html">Favorite Spots</a></li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="/aboutme.html">About Me</a></li>
+              <li><a href="/about_me.html">About Me</a></li>
           </div>
         </div>
       </nav>
