--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <html lang="en">
 <head>
   <title>Hundred Blocks</title>
+  <meta property="og:image" content="https://hudredblocks.github.io/thumbnails/headshot.jpg" />
+  <meta property="og:description" content="Emmanuel's landing page" />
+  <meta property="og:url"content="https://hudredblocks.github.io/" />
+
+<meta property="og:title" content="Coaches Wisdom Telesummit" />
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico?">
@@ -22,54 +27,54 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="active navbar-brand" href="index.html">Home</a>
+            <a class="active navbar-brand" href="index.html">Emmanuel Ameisen</a>
           </div>
 
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-              <li><a href="/fav_spots.html">Favorite Spots</a></li>
-            </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/about_me.html">About Me</a></li>
           </div>
         </div>
       </nav>
 
-    <div id="main">
-    <h3>Welcome to Emmanuel's landing page</h3>
+    <div id="main" class="container">
+    <!-- <h3>Welcome to Emmanuel's landing page</h3> -->
     <div class="row">
-      <div class="col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-3">
         <div class="thumbnail">
-          <a href="https://github.com/hundredblocks" class="thumbnail">
-          <img style="height: 200px; width: 100%; display: block;" src="/assets/thumbnails/github.png" data-holder-rendered="true">
+          <a href="https://github.com/hundredblocks">
+          <img src="/assets/thumbnails/github.png" data-holder-rendered="true">
         </a>
         <div class="caption"> <h3>My Github</h3>
             <p>A little bit of everything.</p>
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-3">
         <div class="thumbnail">
-          <a href="fav_spots.html" class="thumbnail">
-          <img alt="100%x200" data-src="holder.js/100%x200" style="height: 200px; width: 100%; display: block;" src="/assets/thumbnails/fav_spots.png" data-holder-rendered="true">
+          <a href="fav_spots.html">
+          <img src="/assets/thumbnails/fav_spots.png" data-holder-rendered="true">
           </a>
-          <div class="caption"> <h3>Favorite Spots</h3>
-            <p>A map to share my favorite spots in San Francisco!</p>
+          <div class="caption">
+            <h3>Favorite Spots</h3>
+            <p>My favorite locations.</p>
           </div>
         </div>
       </div>
 
-      <div class="col-sm-4 col-md-3">
+      <div class="col-xs-12 col-sm-3">
         <div class="thumbnail">
-          <a href="about_me.html" class="thumbnail">
-          <img alt="100%x200" data-src="holder.js/100%x200" style="height: 200px; width: 100%; display: block;" src="/assets/thumbnails/headshot.jpeg" data-holder-rendered="true">
+          <a href="about_me.html">
+          <img src="/assets/thumbnails/headshot.jpeg" data-holder-rendered="true">
           </a>
-          <div class="caption"> <h3>About me</h3>
+          <div class="caption">
+            <h3>About me</h3>
             <p>Resume, and other fun details.</p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 
   </body>
 </html>
